--- a/folio-blog-project/pom.xml
+++ b/folio-blog-project/pom.xml
@@ -72,6 +72,12 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j2-impl</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
